@@ -79,6 +79,9 @@ Trunk (unreleased changes)
 
     HADOOP-2765. Enables specifying ulimits for streaming/pipes tasks (ddas)
 
+    HADOOP-2888. Make gridmix scripts more readily configurable and amenable
+    to automated execution. (Mukund Madhugiri via cdouglas)
+
   OPTIMIZATIONS
 
     HADOOP-2790.  Fixed inefficient method hasSpeculativeTask by removing
